   Replaced lex/yacc code with custom preferences parser
      lex/yacc parser was having parse failures on some archs
   Allow MD2 texture coordinates to go outside of 0.0 to 1.0 range
   Report error if MD2 has more than one assigned material
   Remove trailing underscore on MD2 animation names
   Updated configuration for newer autoconf (2.61) and automake (1.9)
   Fixed interpolation problem with translation keyframes on looped animations
   Fixed translation of animation name copy in animation sets window
   Treat unhandled backslashes in preferences as regular backslashes
   Changed error message on uknown file type to indicate it is probably
      a file extension problem
   Add ".mm3d" at save time if filename does not have an extension
   Removed several unused modules
   Added shell script for making source code tags

Changes for 1.3.5
   Re-organized menus
   Added "Rotate" tool in texture coordinate window
   Added "Face Out" command to make triangle normals point outward from
      enclosed hulls
   Added File|Export... to save without changing working filename or 
      clearing unsaved flag
   Restrict Save and Save As to types with more complete support (everything
      else must use "Export...")
   Added Copy/Paste selected keyframe (for skeletal and frame)
   Added toolbar option on proj tool to create specific projection type
   Write texture coordinates for MM3D even if there are no materials
   MM3D no longer uses packed structs for mm3d, ms3d, tga, and pcx formats
   Improved material support for COB export
   Animation using Quaternion interpolation (prevent strange rotations when
      rotating on more than one axis)
   Fixed animation image export
   Fixed "Clear Animation Frame" for skeletal (broken when anim window was 
      make dockable)
   Fix (hack) for Perspective label on all viewports
   Fixes for projection mapping at vertical extremes
   MD3 fixes: save case-insensitive animation names, cancel load if user