@@ -18,6 +18,8 @@ Changes for 1.3.6
    Report error if MD2 has more than one assigned material
    Remove trailing underscore on MD2 animation names
    Updated configuration for newer autoconf (2.61) and automake (1.9)
+   Remember last skeletal/frame selection for new animation window
+   Error message when attempting to paste animation frame of wrong type
    Fixed interpolation problem with translation keyframes on looped animations
    Fixed translation of animation name copy in animation sets window
    Treat unhandled backslashes in preferences as regular backslashes
